tests/cpp/internal/negative_case/bad_operator_unknown_token.cpp
// Negative test: unsupported operator overload token should error.
struct Foo {
  int operator%(int x) {
    return x;
  }
};

int main() {
  return 0;
}
